Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.2.3, 6.3.0
-
Fix Version/s: 6.2.5, 6.3.1, 6.4.0 Beta1
-
Component/s: Multimedia
-
Labels:None
-
Platform/s:
-
Commits:f903bad766 (qt/qtmultimedia/dev) f903bad766 (qt/tqtc-qtmultimedia/dev) 9da7721c54 (qt/qtmultimedia/6.3) 9da7721c54 (qt/tqtc-qtmultimedia/6.3) 9da7721c54 (qt/tqtc-qtmultimedia/6.3.1) acb770c950 (qt/tqtc-qtmultimedia/6.2)
Description
When changing the playback position in the pause state, the sound is still played
I checked the behavior on 6.2.3 and 6.3.0
For version 6.3.0, the sound is heard every time the position is changed.
For version 6.2.3, the sound is heard in case of an intensive position change, for example, using a slider.
Attached a test project in which you can reproduce this behavior.
Also attached the video of reproducing the problem.
Attachments
Issue Links
- relates to
-
QTBUG-103842 QMediaPlayer::setPosition: position set doens't match the argument
-
- Closed
-