Windows: Enable scrubbing mode for audio streams

This avoids generating sound while seeking in paused state.

Fixes: QTBUG-102969
Change-Id: I045ef87f17d3980eecdacf56b7513d8886747588
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit f903bad766639a207080c6b4666c4cefc51f0902)